force-app/main/default/objects/ConferenceRoom__c/ConferenceRoom__c.object-meta.xml
<CustomObject>
    <label>Conference Room</label>
    <nameField>
        <label>Conference Room Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>