force-app/main/default/objects/ConferenceRoom__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zoom视频</fullName>
            </value>
            <value>
                <fullName>白板</fullName>
            </value>
            <value>
                <fullName>空调</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>