force-app/main/default/objects/ConferenceRoom__c/fields/RoomNo__c.field-meta.xml
<CustomField>
    <fullName>RoomNo__c</fullName>
    <label>Room No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>